--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.9.2",
     "@types/googlemaps": "^3.43.3",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "axios": "^1.13.2",
     "next": "14.1.0",
     "react": "^18",
