--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "sqlite3": "^5.1.7",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
